manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skyloud-deployment
  labels:
    app: node
spec:
  template:
    metadata:
      name: skyloud-app
      labels:
        app: node
    spec:
      containers:
        - name: node-app
          image: khlilturki97/skyloud
  replicas: 2
  selector:
    matchLabels:
      app: node
