manifests/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: skyloud-service
  labels:
    app: node
spec:
  type: LoadBalancer
  ports:
    - targetPort: 3000
      port: 80
  selector:
    app: node
